--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <title>Memory Game</title>
 
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/login.css">
+
+    <script defer src="./js/login.js"></script>
 </head>
 <body>
     
+    <form class="login-form">
+        <div class="login__header">
+            <span>🧠</span>
+            <h1>Memory Game</h1>
+        </div>
+
+        <input type="text" placeholder="Name" class="login__input">
+
+        <button type="submit" class="login__button" disabled>Play</button>
+    </form>
 </body>
 </html>
