Adicionado efeito de escrever

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <form class="login-form">
         <div class="login__header">
             <span>🧠</span>
-            <h1>Memory Game</h1>
+            <h1>Memory Game Bleach</h1>
+            <h2>Bankai!!</h2>
         </div>
 
         <input type="text" placeholder="Name" class="login__input">
